test/fail/unexpected-eos.rnp
let a
---
SyntaxError: Unexpected end of source
fail/unexpected-eos.rnp:1:6
let a
     ^
